--- a/style.css
+++ b/style.css
@@ -56,6 +56,7 @@ ul{
     display: flex;
     justify-content: space-between;
     align-items: center;
+    cursor: pointer;
 }
 
 li{
@@ -64,7 +65,6 @@ li{
     padding: 1rem;
     list-style-type: none;
     background-color: var(--very-dark-blue);
-    cursor: pointer;
 }
 
 .status{
@@ -179,23 +179,19 @@ li{
     }
  
     .hover{
-        top: 35%;
-        right: 7%;
+        top: 25%;
+        right: 8%;
         bottom: unset;
+        border-radius: 10px 10px 0 10px;
     }
-/*
-    .hover::before{
-        content: '';
-        display: block;
-        position: absolute;
-        width: 40%;
-        height: 100%;
-        bottom: 0;
-        left: -10%;
-        background: white;
-        z-index: -1;
-        transform: rotate(45deg);
-    } */
+
+    .hover p{
+        font-size: 1rem;
+    }
+    .hover h1{
+        font-size: 1.5rem;
+    }
+
 
     .status-content{
         align-items: flex-start;
