--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ body{
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
-
+    background-color: var(--very-dark-blue);
 }
 
 main{
